# mechamind

./: .gitignore  readme.md
MechaMind_console/: .gitignore  README.md  pubspec.yaml
MechaMind_console/lib/: main.dart
MechaMind_console/linux/: CMakeLists.txt
MechaMind_console/test/: widget_test.dart
MechaMind_console/web/: index.html  manifest.json
MechaMind_console/windows/: CMakeLists.txt
MechaMind_console/windows/runner/: Runner.rc  (+1 more)
MechaMind_gui/: .gitignore  README.md  pubspec.yaml
MechaMind_gui/lib/: main.dart
MechaMind_gui/linux/: CMakeLists.txt
MechaMind_gui/test/: widget_test.dart
MechaMind_gui/web/: index.html  manifest.json
MechaMind_gui/windows/: CMakeLists.txt
MechaMind_mcp/: .gitignore  README.md  pyproject.toml
MechaMind_mcp/.cursor/: mcp.json
MechaMind_mcp/mechamind_mcp/: client.py  server.py
MechaMind_mcp/tests/: test_rules.py
MechaMind_mdc/mechamind_mcp/: __init__.py  rules.py
MechaMind_robot/: .gitignore  README.md  package-lock.json  package.json
MechaMind_robot/examples/: HunterBot.js  HunterBot2.js
MechaMind_robot/src/: Mecha.js  connection.js  index.js
MechaMind_robot/test/: converge.test.js  hunter.test.js  modules.test.js
MechaMind_server/: .gitignore  MechaMind_Regolamento_v1.docx  README.md  jest.config.js  package-lock.json  package.json
MechaMind_server/config/: default.json
MechaMind_server/src/: app.js  config.js  constants.js  index.js  logger.js
MechaMind_server/tests/: action.test.js  api.test.js  build.test.js  engine.test.js  match.test.js  positions.test.js  vehicle.test.js  ws.test.js
(+54 files in other folders)
