[project]
name = "mechamind-mcp"
version = "0.1.0"
description = "MCP server Python per MechaMind — esponi il gioco come tool agli LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.6.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mechamind-mcp = "mechamind_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mechamind_mcp*"]
